first commit with content of popefolio

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,9 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #167FFB;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$my-orange: #fabea7;
+$my-pink: #fbe2e5;
+$my-olive: #9cada4;
+$my-green: #767c77;
+$my-lightgrey: #F4F4F4;
+$my-grey: #9A9A9A
