--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,70 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="navbar"></div>
+<div class="container col-8">
+  <div class="top-container">
+    <div class="main-title">
+      <h1>hey! i'm tom.</h1>
+    </div>
+
+    <div class="title one">
+      <h2>designer, front-end developer & trainer</h2>
+    </div>
+
+     </div>
+
+    <div class="green-container col-11 offset-1">
+      <div class="my-description col-8 offset-4">
+        <p>I’m passionate about using technology to make this world a healthier, happier, more interesting place.</p>
+
+          <p>Since beginning my journey in the big bad world of Tech 7 years ago, I have taught senior executives about the ‘magic’ of technology for companies across the world, built and rolled out new innovation frameworks for three major conglomerates and trained myself as a full stack web developer.</p>
+
+          <p>I love meticulous design and making things pop.</p>
+      </div>
+    </div>
+
+
+  <div class="cards">
+    <div class="card design col-4">
+      <%= image_tag "design.png", width: 50 %>
+      <h3>Design</h3>
+    </div>
+    <div class="card frontend col-4">
+      <%= image_tag "frontend.png", width: 50 %>
+      <h3>Frontend Development</h3>
+    </div>
+    <div class="card trainer col-4">
+      <%= image_tag "trainer.png", width: 50 %>
+      <h3>Trainer</h3>
+    </div>
+  </div>
+
+  <div class="project-triangle">
+    <div class="title two"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
+
+  <div class="projects">
+    <div class="project-flovelle">
+      <i></i>
+      <h1>Flovelle</h1>
+      <p>A flower subscription service</p>
+    </div>
+    <div class="project-vanlords">
+      <i></i>
+      <h1>Vanlords</h1>
+      <p>Campervan Rentals</p>
+    </div>
+    <div class="project-cocktail">
+      <i></i>
+      <h1>Cocktail Bonanza</h1>
+      <p>Cocktail Search</p>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="social-square">
+      <h2>Lets Be Social</h2>
+    </div>
+  </div>
+</div>
+
