--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,79 @@
-.navbar-lewagon {
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,200');
+
+.navbar.navbar-clean {
+  background: #fff;
+  border-radius: 0;
+  color: #8f8f8f;
+}
+#navbar {
+  background-color: $my-green;
+}
+
+.navbar.navbar-clean a {
+  color: #8f8f8f;
+}
+
+.container-nav {
+  width: 100%;
+  display: flex;
   justify-content: space-between;
-  background: white;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.hamburger {
+  border: none;
+  background-color: transparent;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-header {
+  margin: 0, auto;
+  padding-top: 13px;
+  padding-left: 50px;
 }
+
+.navbar-expand-lg .navbar-nav {
+    margin: auto;
+    padding: 10px 73px;
+    width: 100%;
+  }
+
+.nav-item {
+  padding: 5px;
+  width: 100%;
+}
+
+.nav-item a {
+  font-size: 15px;
+  color: $my-green;
+  margin: 10px 0px;
+}
+
+.navbar-toggler {
+  border: none;
+  color: $my-green;
+}
+
+.navbar {
+  position: sticky;
+  transition: top 1s;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  padding: 0 0 10px 0;
+}
+
+.collapse .navbar-collapse {
+  width: 100%;
+}
+
+@media (max-width: 576px) {
+  .container-nav {
+    margin: 0px;
+  }
+}
+
+@media (min-width: 1100px) {
+  .navbar-header {
+    margin: 0px;
+  }
+}
+
