--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,54 @@
 // Specific CSS for your home-page
+h1 {
+  font-weight: 600;
+  font-size: 120px;
+  line-height: 0.9;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+.main-title {
+  width: 30%;
+}
+
+.my-description {
+  width: 80%;
+}
+
+.green-container {
+  background-color: $my-green;
+  padding: 30px 30px 30px 30px;
+  position: relative;
+  height: 80vh;
+  top: 222px;
+  left: 60px;
+  height: 80vh;
+  z-index: -1;
+}
+
+.top-container {
+  display: flex;
+  align-items: center;
+
+  position: absolute;
+}
+
+.cards {
+  display: flex;
+  width: 100%;
+  height: 50vh;
+  justify-content: center;
+  align-text: center;
+}
+
+.cards h3 {
+  color: grey;
+  font-size: 20px;
+}
+
+.card {
+  align-items: center;
+  border: none;
+}
