--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Popefolio</title>
+    <title>Tom's Popefolio</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;800;900&display=swap" rel="stylesheet">
+    <link href="dist/hamburgers.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
@@ -12,6 +13,7 @@
   </head>
 
   <body>
+    <%= render 'components/navbar' %>
     <%= yield %>
   </body>
 </html>
