--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,39 +1,85 @@
 <div class="navbar"></div>
-<div class="container col-8">
+<div class="container col-9">
   <div class="top-container">
     <div class="main-title">
       <h1>hey! i'm tom.</h1>
     </div>
+    <div class="headshot">
+      <%= image_tag "TomPope"%>
+    </div>
+  </div>
 
-    <div class="title one">
-      <h2>designer, front-end developer & trainer</h2>
+      <div class="title one">
+
     </div>
 
-     </div>
-
     <div class="green-container col-11 offset-1">
+      <h2>designer, front-end developer & trainer</h2>
       <div class="my-description col-8 offset-4">
+
         <p>I’m passionate about using technology to make this world a healthier, happier, more interesting place.</p>
 
           <p>Since beginning my journey in the big bad world of Tech 7 years ago, I have taught senior executives about the ‘magic’ of technology for companies across the world, built and rolled out new innovation frameworks for three major conglomerates and trained myself as a full stack web developer.</p>
 
-          <p>I love meticulous design and making things pop.</p>
+          <p>I love meticulous design and making things <strong>pop.</strong></p>
       </div>
     </div>
 
 
   <div class="cards">
     <div class="card design col-4">
-      <%= image_tag "design.png", width: 50 %>
+      <div class="icon">
+        <%= image_tag "design.png", width: 25 %>
+      </div>
       <h3>Design</h3>
+      <hr>
+      <p>I love minimal design - less is more, striking colours and thoughtful interactions.</p>
+      <p><strong>Things I enjoy designing:</strong></p>
+      <p>Mobile, Web, UX, UI, Logos</p>
+
+      <p><strong>Design Tools:</strong></p>
+      <ul>
+        <li>Figma</li>
+        <li>Canva</li>
+        <li>Marvel</li>
+        <li>Adobe Suite</li>
+      </ul>
     </div>
     <div class="card frontend col-4">
-      <%= image_tag "frontend.png", width: 50 %>
+      <div class="icon">
+        <%= image_tag "frontend.png", width: 25  %>
+      </div>
       <h3>Frontend Development</h3>
+      <hr>
+      <p>I build websites from scratch and enjoy telling a story on an interactive website.</p>
+      <p><strong>Languages I speak:</strong></p>
+      <p>Ruby, HTML, CSS, Javascript, SQL, Git, React</p>
+
+      <p><strong>Dev Tools:</strong></p>
+      <ul>
+        <li>Rails</li>
+        <li>Bootstrap</li>
+        <li>Github</li>
+        <li>Heroku</li>
+        <li>Active Record</li>
+      </ul>
     </div>
     <div class="card trainer col-4">
-      <%= image_tag "trainer.png", width: 50 %>
+      <div class="icon">
+        <%= image_tag "trainer.png", width: 25 %>
+      </div>
       <h3>Trainer</h3>
+      <hr>
+      <p>I am lucky enough to be able to teach people about the ‘magic’ of technology every day.</p>
+      <p><strong>Topics I teach:</strong></p>
+      <p>Lean Startup, Innovation, Digital Leadership, Code, Data, Cyber</p>
+
+      <p><strong>Experience:</strong></p>
+      <ul>
+        <li>6+ years as a trainer</li>
+        <li>100+ short courses</li>
+        <li>10+ major public events</li>
+        <li>20+ companies</li>
     </div>
   </div>
 
