portfolio triangle edits and links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
       <hr>
       <p>I love minimal design - less is more, striking colours and thoughtful interactions.</p>
       <p><strong>Things I enjoy designing:</strong></p>
-      <p>Mobile, Web, UX, UI, Logos</p>
+      <p>Mobile, Web, UX, UI, Logos, Decks</p>
 
       <p><strong>Design Tools:</strong></p>
       <ul>
@@ -83,27 +83,49 @@
     </div>
   </div>
 
-  <div class="project-triangle">
-    <div class="title two"></div>
-    <div class="line"></div>
-    <div class="line"></div>
-  </div>
+
 
   <div class="projects">
-    <div class="project-flovelle">
-      <i></i>
-      <h1>Flovelle</h1>
-      <p>A flower subscription service</p>
+    <div class="project-list">
+      <a href="https://www.flovelle.com" target="_blank">
+        <div class="project-flovelle">
+            <i class="fas fa-chevron-right"></i>
+            <div class="project-details">
+              <h1>Flovelle</h1>
+              <p>A flower subscription service</p>
+            </div>
+        </div>
+      </a>
+
+      <a href="https://vanlords.herokuapp.com" target="_blank">
+        <div class="project-vanlords">
+          <i class="fas fa-chevron-right"></i>
+          <div class="project-details">
+            <h1>Vanlords</h1>
+            <p>Campervan Rentals</p>
+          </div>
+        </div>
+      </a>
+
+      <a href="https://cocktail-bonanza.herokuapp.com" target="_blank">
+        <div class="project-cocktail">
+          <i class="fas fa-chevron-right"></i>
+          <div class="project-details">
+            <h1>Tail</h1>
+            <p>Cocktail Search</p>
+          </div>
+        </div>
+      </a>
     </div>
-    <div class="project-vanlords">
-      <i></i>
-      <h1>Vanlords</h1>
-      <p>Campervan Rentals</p>
-    </div>
-    <div class="project-cocktail">
-      <i></i>
-      <h1>Cocktail Bonanza</h1>
-      <p>Cocktail Search</p>
+
+    <div class="project-triangle">
+      <div class="triangle-down">
+        <hr id="line-one">
+        <hr id="line-two">
+        <h2>my projects.</h2>
+      </div>
+
+      <div class="title two"></div>
     </div>
   </div>
 
