--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,7 +9,11 @@ h3 {
   font-size: 30px;
 }
 
-hr {
+a {
+  color: white;
+}
+
+.cards hr {
   color: $my-green;
   width:30%;
   margin:30px auto;
@@ -52,7 +56,7 @@ hr {
   width: 100%;
   justify-content: center;
   align-text: center;
-  border-radius: 20px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
 .cards h3 {
@@ -63,13 +67,16 @@ hr {
 .cards p {
   color: grey;
   text-align: center;
-  font-size: 15px;
+  font-size: 14px;
+  font-weight: 200;
 }
 
 .cards li {
   color: grey;
   list-style: none;
   text-align: center;
+  font-size: 14px;
+  font-weight: 200;
 }
 
 .cards ul {
@@ -101,4 +108,62 @@ hr {
   position: relative;
   top: 187px;
   left: 300px;
+}
+
+.projects {
+  display: flex;
+  padding-top: 50px;
+}
+
+.project-list {
+  padding-top: 50px;
+}
+
+.project-flovelle, .project-vanlords, .project-cocktail {
+  display: flex;
+  align-items: center;
+}
+
+.fas {
+  font-size: 50px;
+  padding-right: 50px;
+  padding-bottom: 44px;
+}
+
+.triangle-down {
+  width: 0;
+  height: 0;
+  border-left: 180px solid transparent;
+  border-right: 180px solid transparent;
+  border-top: 300px solid #767c77;
+    }
+
+.triangle-down h2 {
+  text-align: center;
+  top: -321px;
+  left: -94px;
+  position: relative;
+  width: 200px;
+  margin: 0px;
+  font-size: 29px;
+}
+
+#line-one {
+  transform: rotate(59deg);
+  width: 310px;
+  border: 1px solid white;
+  color: white;
+  position: relative;
+  top: -123px;
+  left: -185px;
+}
+
+#line-two {
+  transform: rotate(59deg);
+  width: 310px;
+  border: 1px solid white;
+  color: white;
+  position: relative;
+  top: -142px;
+  left: -253px;
 }
