--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,8 +14,12 @@
     </div>
 
     <div class="green-container col-11 offset-1">
-      <h2>designer, front-end developer & trainer</h2>
-      <div class="my-description col-8 offset-4">
+    </div>
+
+<div class="intro-cards">
+    <div class="introduction">
+      <div class="my-description">
+        <h2>designer, front-end developer & trainer</h2>
 
         <p>I’m passionate about using technology to make this world a healthier, happier, more interesting place.</p>
 
@@ -23,7 +27,7 @@
 
           <p>I love meticulous design and making things <strong>pop.</strong></p>
       </div>
-    </div>
+      </div>
 
 
   <div class="cards">
@@ -82,9 +86,9 @@
         <li>20+ companies</li>
     </div>
   </div>
+</div>
 
-
-
+<div class="container-projects">
   <div class="projects">
     <div class="project-list">
       <a href="https://www.flovelle.com" target="_blank">
@@ -92,7 +96,9 @@
             <i class="fas fa-chevron-right"></i>
             <div class="project-details">
               <h1>Flovelle</h1>
-              <p>A flower subscription service</p>
+              <div class="company-description">
+                <p>A flower subscription service</p>
+              </div>
             </div>
         </div>
       </a>
@@ -129,10 +135,13 @@
     </div>
   </div>
 
-  <div class="footer">
-    <div class="social-square">
-      <h2>Lets Be Social</h2>
-    </div>
-  </div>
+  <nav class="footer">
+    <header><b>Socials</b></header>
+    <div id="github"><span><a href="https://github.com/PopeTR"><i class="fab fa-github"></i></a></span></div>
+    <div><span><a href="https://www.linkedin.com/in/thomas-pope-8b390077/"><i class="fab fa-linkedin"></i></a></span></div>
+    <div><span><a href="https://www.instagram.com/popetr/"><i class="fab fa-instagram-square"></i></a></span></div>
+    <div id="email"><span><a href="mailto:popetr90@gmail.com"><i class="far fa-envelope"></i></a></span></div>
+  </nav>
+</div>
 </div>
 
