--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
       <h1>hey! i'm tom.</h1>
     </div>
     <div class="headshot">
-      <%= image_tag "TomPope"%>
+      <%= image_tag "TomPope.jpg"%>
     </div>
   </div>
 
