--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar"></div>
-<div class="container col-9">
+<div class="container col-lg-9">
   <div class="top-container">
     <div class="main-title">
       <h1>hey! i'm tom.</h1>
@@ -16,132 +16,191 @@
     <div class="green-container col-11 offset-1">
     </div>
 
-<div class="intro-cards">
+  <div class="intro-cards">
     <div class="introduction">
       <div class="my-description">
-        <h2>designer, front-end developer & trainer</h2>
+        <h2>designer, developer & trainer</h2>
 
         <p>I’m passionate about using technology to make this world a healthier, happier, more interesting place.</p>
 
-          <p>Since beginning my journey in the big bad world of Tech 7 years ago, I have taught senior executives about the ‘magic’ of technology for companies across the world, built and rolled out new innovation frameworks for three major conglomerates and trained myself as a full stack web developer.</p>
+          <p>Since beginning my journey in the crazy world of Tech 7 years ago, I have taught senior executives about the ‘magic’ of technology for companies across the world, built and rolled out new innovation frameworks for three major conglomerates and trained myself as a full stack web developer.</p>
 
           <p>I love meticulous design and making things <strong>pop.</strong></p>
       </div>
-      </div>
-
-
-  <div class="cards">
-    <div class="card design col-4">
-      <div class="icon">
-        <%= image_tag "design.png", width: 25 %>
-      </div>
-      <h3>Design</h3>
-      <hr>
-      <p>I love minimal design - less is more, striking colours and thoughtful interactions.</p>
-      <p><strong>Things I enjoy designing:</strong></p>
-      <p>Mobile, Web, UX, UI, Logos, Decks</p>
-
-      <p><strong>Design Tools:</strong></p>
-      <ul>
-        <li>Figma</li>
-        <li>Canva</li>
-        <li>Marvel</li>
-        <li>Adobe Suite</li>
-      </ul>
     </div>
-    <div class="card frontend col-4">
-      <div class="icon">
-        <%= image_tag "frontend.png", width: 25  %>
-      </div>
-      <h3>Frontend Development</h3>
-      <hr>
-      <p>I build websites from scratch and enjoy telling a story on an interactive website.</p>
-      <p><strong>Languages I speak:</strong></p>
-      <p>Ruby, HTML, CSS, Javascript, SQL, Git, React</p>
 
-      <p><strong>Dev Tools:</strong></p>
-      <ul>
-        <li>Rails</li>
-        <li>Bootstrap</li>
-        <li>Github</li>
-        <li>Heroku</li>
-        <li>Active Record</li>
-      </ul>
-    </div>
-    <div class="card trainer col-4">
-      <div class="icon">
-        <%= image_tag "trainer.png", width: 25 %>
-      </div>
-      <h3>Trainer</h3>
-      <hr>
-      <p>I am lucky enough to be able to teach people about the ‘magic’ of technology every day.</p>
-      <p><strong>Topics I teach:</strong></p>
-      <p>Lean Startup, Innovation, Digital Leadership, Code, Data, Cyber</p>
 
-      <p><strong>Experience:</strong></p>
-      <ul>
-        <li>6+ years as a trainer</li>
-        <li>100+ short courses</li>
-        <li>10+ major public events</li>
-        <li>20+ companies</li>
+    <div class="cards">
+      <div class="card design col-4">
+        <div class="icon">
+          <%= image_tag "design.png", width: 25 %>
+        </div>
+        <h3>Design</h3>
+        <hr>
+        <p>I love minimal design - less is more, striking colours and thoughtful interactions.</p>
+        <p><strong>Things I enjoy designing:</strong></p>
+        <p>Mobile, Web, UX, UI, Logos, Decks</p>
+        <p><strong>Design Tools:</strong></p>
+        <ul>
+          <li>Figma</li>
+          <li>Canva</li>
+          <li>Marvel</li>
+          <li>Adobe Suite</li>
+        </ul>
+      </div>
+
+      <div class="card frontend col-4">
+        <div class="icon">
+          <%= image_tag "frontend.png", width: 25  %>
+        </div>
+        <h3>Frontend Development</h3>
+        <hr>
+        <p>I build websites from scratch and enjoy telling a story on an interactive website.</p>
+        <p><strong>Languages I speak:</strong></p>
+        <p>Ruby, HTML, CSS, Javascript, SQL, Git, React</p>
+        <p><strong>Dev Tools:</strong></p>
+        <ul>
+          <li>Rails</li>
+          <li>Bootstrap</li>
+          <li>Github</li>
+          <li>Heroku</li>
+          <li>Active Record</li>
+        </ul>
+      </div>
+
+      <div class="card trainer col-4">
+        <div class="icon">
+          <%= image_tag "trainer.png", width: 25 %>
+        </div>
+        <h3>Trainer</h3>
+        <hr>
+        <p>I am lucky enough to be able to teach people about the ‘magic’ of technology every day.</p>
+        <p><strong>Topics I teach:</strong></p>
+        <p>Lean Startup, Innovation, Digital Leadership, Code, Data, Cyber</p>
+
+        <p><strong>Experience:</strong></p>
+        <ul>
+          <li>6+ years as a trainer</li>
+          <li>100+ short courses</li>
+          <li>10+ major public events</li>
+          <li>20+ companies</li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="container-projects">
-  <div class="projects">
-    <div class="project-list">
-      <a href="https://www.flovelle.com" target="_blank">
-        <div class="project-flovelle">
+  <div class="container-projects">
+    <div class="projects">
+      <div class="project-list">
+        <a href="https://www.flovelle.com" target="_blank">
+          <div class="project-flovelle">
+              <i class="fas fa-chevron-right"></i>
+              <div class="project-details">
+                <h1>Flovelle</h1>
+                <div class="company-description">
+                  <p>A flower subscription service</p>
+                </div>
+              </div>
+          </div>
+        </a>
+
+        <a href="https://vanlords.herokuapp.com" target="_blank">
+          <div class="project-vanlords">
             <i class="fas fa-chevron-right"></i>
             <div class="project-details">
-              <h1>Flovelle</h1>
-              <div class="company-description">
-                <p>A flower subscription service</p>
-              </div>
+              <h1>Vanlords</h1>
+              <p>Campervan Rentals</p>
             </div>
-        </div>
-      </a>
-
-      <a href="https://vanlords.herokuapp.com" target="_blank">
-        <div class="project-vanlords">
-          <i class="fas fa-chevron-right"></i>
-          <div class="project-details">
-            <h1>Vanlords</h1>
-            <p>Campervan Rentals</p>
           </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="https://cocktail-bonanza.herokuapp.com" target="_blank">
-        <div class="project-cocktail">
-          <i class="fas fa-chevron-right"></i>
-          <div class="project-details">
-            <h1>Tail</h1>
-            <p>Cocktail Search</p>
+        <a href="https://cocktail-bonanza.herokuapp.com" target="_blank">
+          <div class="project-cocktail">
+            <i class="fas fa-chevron-right"></i>
+            <div class="project-details">
+              <h1>Tail</h1>
+              <p>Cocktail Search</p>
+            </div>
           </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="project-triangle">
-      <div class="triangle-down">
-        <hr id="line-one">
-        <hr id="line-two">
-        <h2>my projects.</h2>
+        </a>
       </div>
 
-      <div class="title two"></div>
+      <div class="project-triangle">
+        <div class="triangle-down">
+          <hr id="line-one">
+          <hr id="line-two">
+          <h2>my projects.</h2>
+        </div>
+
+        <div class="title two"></div>
+      </div>
     </div>
+
+    <div class="line">
+      <hr>
+    </div>
+
+      <div class="companies-container">
+        <div class="header-companies col-4">
+          <h2>companies<br> i have<br> collaborated with</h2>
+        </div>
+        <div class="list-companies col-8">
+          <div class="card-list">
+            <div class="card-category" style="background-color: white">
+              <div class="logo">
+                <%= image_tag "ikea_logo.jpg" %>
+              </div>
+            </div>
+
+            <div class="card-category" style="background-color: white">
+              <div class="logo">
+                <%= image_tag "ING_logo.png" %>
+              </div>
+            </div>
+
+            <div class="card-category" style="background-color: white">
+              <div class="logo">
+                <%= image_tag "philips_logo.png" %>
+              </div>
+            </div>
+
+            <div class="card-category" style="background-color: white">
+              <div class="logo">
+                <%= image_tag "citibank_logo.png" %>
+              </div>
+            </div>
+
+            <div class="card-category" style="background-color: white">
+              <div class="logo">
+                <%= image_tag "qantas_logo.png" %>
+              </div>
+            </div>
+
+            <div class="card-category" style="background-color: white">
+              <div class="logo">
+                <%= image_tag "macquarie_logo.png" %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <div class="line">
+      <hr>
+    </div>
+
+    <nav class="footer">
+      <header><%= image_tag "logo2.png", alt: "logo-navbar", width: 150 %></header>
+      <div id="github"><span><a href="https://github.com/PopeTR"><i class="fab fa-github"></i></a></span></div>
+      <div><span><a href="https://www.linkedin.com/in/thomas-pope-8b390077/"><i class="fab fa-linkedin"></i></a></span></div>
+      <div><span><a href="https://www.instagram.com/popetr/"><i class="fab fa-instagram-square"></i></a></span></div>
+      <div id="email"><span><a href="mailto:popetr90@gmail.com"><i class="far fa-envelope"></i></a></span></div>
+    </nav>
   </div>
 
-  <nav class="footer">
-    <header><b>Socials</b></header>
-    <div id="github"><span><a href="https://github.com/PopeTR"><i class="fab fa-github"></i></a></span></div>
-    <div><span><a href="https://www.linkedin.com/in/thomas-pope-8b390077/"><i class="fab fa-linkedin"></i></a></span></div>
-    <div><span><a href="https://www.instagram.com/popetr/"><i class="fab fa-instagram-square"></i></a></span></div>
-    <div id="email"><span><a href="mailto:popetr90@gmail.com"><i class="far fa-envelope"></i></a></span></div>
-  </nav>
-</div>
+  <div class="copyright">
+    <p>This website has been designed and coded by Tom Pope</p>
+  </div>
+
 </div>
 
