--- a/app/assets/stylesheets/components/_menubar.scss
+++ b/app/assets/stylesheets/components/_menubar.scss
@@ -1,9 +1,8 @@
 .footer {
-  background-color: $my-green;
   width: 16vw;
-  margin: 40px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin: 60px auto;
   display: flex;
+  justify-content: center;
   border-radius: 40px;
 
 }
@@ -16,34 +15,41 @@
 
 .footer > div {
     height: 0;
+    width: 0;
     opacity: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     justify-content: space-evenly;
-    transition: 240ms background-color linear;
+    transition: 500ms background-color linear;
     font-size: 1.2em;
     cursor: default;
 }
 
 .footer:hover > div {
   background-color: $my-green;
-  width: 16vw;
+  width: 10vw;
+  height: 150px;
   opacity: 1;
   padding: 22px 50px 22px 50px;
   animation: 240ms item-fade-in linear forwards;
   animation-delay: 120ms;
   transition: 120ms background-color linear;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-header {
-  margin: 10px 10px 10px 58px;
-  text-align: center;
+.footer:hover {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
-#github {
-  margin-left: 20px;
+.footer:hover img{
+  border-bottom-left-radius: 40px;
+  border-top-left-radius: 40px;
 }
 
 #email {
