--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,9 @@
     <div class="main-title">
       <h1>hey! i'm tom.</h1>
     </div>
+    <div class="headshot" id="stensil">
+      <%= image_tag "circle.png" %>
+    </div>
     <div class="headshot">
       <%= image_tag "TomPope.jpg"%>
     </div>
@@ -29,64 +32,8 @@
       </div>
     </div>
 
+    <%= render 'components/cards' %>
 
-    <div class="cards">
-      <div class="card design col-4">
-        <div class="icon">
-          <%= image_tag "design.png", width: 25 %>
-        </div>
-        <h3>Design</h3>
-        <hr>
-        <p>I love minimal design - less is more, striking colours and thoughtful interactions.</p>
-        <p><strong>Things I enjoy designing:</strong></p>
-        <p>Mobile, Web, UX, UI, Logos, Decks</p>
-        <p><strong>Design Tools:</strong></p>
-        <ul>
-          <li>Figma</li>
-          <li>Canva</li>
-          <li>Marvel</li>
-          <li>Adobe Suite</li>
-        </ul>
-      </div>
-
-      <div class="card frontend col-4">
-        <div class="icon">
-          <%= image_tag "frontend.png", width: 25  %>
-        </div>
-        <h3>Frontend Development</h3>
-        <hr>
-        <p>I build websites from scratch and enjoy telling a story on an interactive website.</p>
-        <p><strong>Languages I speak:</strong></p>
-        <p>Ruby, HTML, CSS, Javascript, SQL, Git, React</p>
-        <p><strong>Dev Tools:</strong></p>
-        <ul>
-          <li>Rails</li>
-          <li>Bootstrap</li>
-          <li>Github</li>
-          <li>Heroku</li>
-          <li>Active Record</li>
-        </ul>
-      </div>
-
-      <div class="card trainer col-4">
-        <div class="icon">
-          <%= image_tag "trainer.png", width: 25 %>
-        </div>
-        <h3>Trainer</h3>
-        <hr>
-        <p>I am lucky enough to be able to teach people about the ‘magic’ of technology every day.</p>
-        <p><strong>Topics I teach:</strong></p>
-        <p>Lean Startup, Innovation, Digital Leadership, Code, Data, Cyber</p>
-
-        <p><strong>Experience:</strong></p>
-        <ul>
-          <li>6+ years as a trainer</li>
-          <li>100+ short courses</li>
-          <li>10+ major public events</li>
-          <li>20+ companies</li>
-        </ul>
-      </div>
-    </div>
   </div>
 
   <div class="container-projects">
@@ -129,78 +76,34 @@
         <div class="triangle-down">
           <hr id="line-one">
           <hr id="line-two">
-          <h2>my projects.</h2>
+          <h2>recent projects.</h2>
         </div>
 
         <div class="title two"></div>
       </div>
     </div>
+  </div>
+</div>
 
-    <div class="line">
-      <hr>
-    </div>
+<div class="container-pink col-lg-10">
 
-      <div class="companies-container">
-        <div class="header-companies col-4">
-          <h2>companies<br> i have<br> collaborated with</h2>
-        </div>
-        <div class="list-companies col-8">
-          <div class="card-list">
-            <div class="card-category" style="background-color: white">
-              <div class="logo">
-                <%= image_tag "ikea_logo.jpg" %>
-              </div>
-            </div>
 
-            <div class="card-category" style="background-color: white">
-              <div class="logo">
-                <%= image_tag "ING_logo.png" %>
-              </div>
-            </div>
+  <%=  render 'components/companies'%>
 
-            <div class="card-category" style="background-color: white">
-              <div class="logo">
-                <%= image_tag "philips_logo.png" %>
-              </div>
-            </div>
-
-            <div class="card-category" style="background-color: white">
-              <div class="logo">
-                <%= image_tag "citibank_logo.png" %>
-              </div>
-            </div>
-
-            <div class="card-category" style="background-color: white">
-              <div class="logo">
-                <%= image_tag "qantas_logo.png" %>
-              </div>
-            </div>
-
-            <div class="card-category" style="background-color: white">
-              <div class="logo">
-                <%= image_tag "macquarie_logo.png" %>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    <div class="line">
-      <hr>
-    </div>
-
-    <nav class="footer">
-      <header><%= image_tag "logo2.png", alt: "logo-navbar", width: 150 %></header>
-      <div id="github"><span><a href="https://github.com/PopeTR"><i class="fab fa-github"></i></a></span></div>
-      <div><span><a href="https://www.linkedin.com/in/thomas-pope-8b390077/"><i class="fab fa-linkedin"></i></a></span></div>
-      <div><span><a href="https://www.instagram.com/popetr/"><i class="fab fa-instagram-square"></i></a></span></div>
-      <div id="email"><span><a href="mailto:popetr90@gmail.com"><i class="far fa-envelope"></i></a></span></div>
-    </nav>
+  <div class="line">
+    <hr>
   </div>
 
+  <nav class="footer col-lg-9">
+    <header><%= image_tag "logo2.png", alt: "logo-navbar", width: 150 %></header>
+    <div id="github"><span><a href="https://github.com/PopeTR"><i class="fab fa-github"></i></a></span></div>
+    <div><span><a href="https://www.linkedin.com/in/thomas-pope-8b390077/"><i class="fab fa-linkedin"></i></a></span></div>
+    <div><span><a href="https://www.instagram.com/popetr/"><i class="fab fa-instagram-square"></i></a></span></div>
+    <div id="email"><span><a href="mailto:popetr90@gmail.com"><i class="far fa-envelope"></i></a></span></div>
+  </nav>
+
   <div class="copyright">
-    <p>This website has been designed and coded by Tom Pope</p>
+    <p>~ Designed and Built by Tom Pope ~</p>
   </div>
 
 </div>
-
