--- a/app/views/components/_cards.html.erb
+++ b/app/views/components/_cards.html.erb
@@ -5,7 +5,7 @@
         </div>
         <h3>Design</h3>
         <hr>
-        <p>I love minimal design - less is more, striking colours and thoughtful interactions./p>
+        <p>I love minimal design - less is more, striking colours and thoughtful interactions.</p>
         <p><strong>Things I enjoy designing:</strong></p>
         <p>Mobile, Web, UX, UI, Logos, Decks</p>
         <p><strong>Design Tools:</strong></p>
