--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
 
     </div>
 
-    <div class="green-container col-11 offset-1">
+    <div class="green-container col-sm-12 col-11 offset-1">
     </div>
 
   <div class="intro-cards">
