--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,6 +19,7 @@ a {
   color: transparent;
   -webkit-text-stroke: 2px white;
   text-decoration: none;
+  transition: 0.3s;
 }
 
 .cards hr {
@@ -30,6 +31,9 @@ a {
 .main-title {
   width: 30%;
 }
+
+
+
 
 .introduction {
   display: flex;
@@ -141,11 +145,20 @@ a {
   z-index: 1;
 }
 
+@keyframes swing {
+  0%, 100% { transform: rotate(-10deg);}
+  50% { transform: rotate(10deg); }
+  50% { transform:translate(20px,0); }
+}
+
 #stensil {
   position: absolute;
   left: 584px;
   z-index: 0;
+  animation: swing 2s infinite ease-in-out;
 }
+
+
 
 .title {
   position: relative;
