--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -59,7 +59,7 @@ a {
   height: 80vh;
   top: 227px;
   left: 38px;
-  height: 600px;
+  height: 650px;
   z-index: -1;
 }
 
@@ -79,7 +79,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  width: 100%;
   position: absolute;
 }
 
@@ -153,7 +153,7 @@ a {
 
 #stensil {
   position: absolute;
-  left: 584px;
+  left: 65%;
   z-index: 0;
   animation: swing 2s infinite ease-in-out;
 }
