--- a/app/views/components/_cards.html.erb
+++ b/app/views/components/_cards.html.erb
@@ -1,57 +1,75 @@
+
 <div class="cards">
-      <div class="card design col-4">
-        <div class="icon">
-          <%= image_tag "design.png", width: 25 %>
-        </div>
-        <h3>Design</h3>
-        <hr>
-        <p>I love minimal design - less is more, striking colours and thoughtful interactions.</p>
-        <p><strong>Things I enjoy designing:</strong></p>
-        <p>Mobile, Web, UX, UI, Logos, Decks</p>
-        <p><strong>Design Tools:</strong></p>
-        <ul>
-          <li>Figma</li>
-          <li>Canva</li>
-          <li>Marvel</li>
-          <li>Adobe Suite</li>
-        </ul>
-      </div>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+    Breakfast
+  </div>
 
-      <div class="card frontend col-4">
-        <div class="icon">
-          <%= image_tag "frontend.png", width: 25  %>
-        </div>
-        <h3>Developer</h3>
-        <hr>
-        <p>I build websites from scratch and enjoy telling a story on the screen</p>
-        <p><strong>Languages I speak:</strong></p>
-        <p>Ruby, HTML, CSS, Javascript, React, SQL, Git</p>
-        <p><strong>Dev Tools:</strong></p>
-        <ul>
-          <li>Rails</li>
-          <li>Sass</li>
-          <li>Github</li>
-          <li>Heroku</li>
-          <li>Active Record</li>
-        </ul>
-      </div>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/lunch.jpg)">
+    Lunch
+  </div>
 
-      <div class="card trainer col-4">
-        <div class="icon">
-          <%= image_tag "trainer.png", width: 25 %>
-        </div>
-        <h3>Trainer</h3>
-        <hr>
-        <p>I am lucky enough to be able to teach people about the ‘magic’ of technology every day</p>
-        <p><strong>Topics I teach:</strong></p>
-        <p>Lean Startup, Innovation, Digital Leadership, Code, Data, Cyber</p>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/dinner.jpg)">
+    Dinner
+  </div>
+</div>
 
-        <p><strong>Experience:</strong></p>
-        <ul>
-          <li>6+ years as a trainer</li>
-          <li>100+ short courses</li>
-          <li>10+ major public events</li>
-          <li>20+ companies</li>
-        </ul>
-      </div>
+
+
+
+<div class="cards">
+  <div class="card-cv design">
+    <div class="icon">
+      <%= image_tag "design.png", width: 25 %>
     </div>
+    <h3>Design</h3>
+    <hr>
+    <p>I love minimal design - less is more, striking colours and thoughtful interactions.</p>
+    <p><strong>Things I enjoy designing:</strong></p>
+    <p>Mobile, Web, UX, UI, Logos, Decks</p>
+    <p><strong>Design Tools:</strong></p>
+    <ul>
+      <li>Figma</li>
+      <li>Canva</li>
+      <li>Marvel</li>
+      <li>Adobe Suite</li>
+    </ul>
+  </div>
+
+  <div class="card-cv frontend">
+    <div class="icon">
+      <%= image_tag "frontend.png", width: 25  %>
+    </div>
+    <h3>Developer</h3>
+    <hr>
+    <p>I build websites from scratch and enjoy telling a story on the screen</p>
+    <p><strong>Languages I speak:</strong></p>
+    <p>Ruby, HTML, CSS, Javascript, React, SQL, Git</p>
+    <p><strong>Dev Tools:</strong></p>
+    <ul>
+      <li>Rails</li>
+      <li>Sass</li>
+      <li>Github</li>
+      <li>Heroku</li>
+      <li>Active Record</li>
+    </ul>
+  </div>
+
+  <div class="card-cv trainer">
+    <div class="icon">
+      <%= image_tag "trainer.png", width: 25 %>
+    </div>
+    <h3>Trainer</h3>
+    <hr>
+    <p>I am lucky enough to be able to teach people about the ‘magic’ of technology every day</p>
+    <p><strong>Topics I teach:</strong></p>
+    <p>Lean Startup, Innovation, Digital Leadership, Code, Data, Cyber</p>
+
+    <p><strong>Experience:</strong></p>
+    <ul>
+      <li>6+ years as a trainer</li>
+      <li>100+ short courses</li>
+      <li>10+ major public events</li>
+      <li>20+ companies</li>
+    </ul>
+  </div>
+</div>
