--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="profile-container col-lg-9">
   <div class="top-container">
     <div class="main-title">
-      <h1>hey! i'm tom.</h1>
+      <h1>hey! im tom.</h1>
     </div>
     <div class="headshot" id="stensil">
       <%= image_tag "circle.png" %>
@@ -12,11 +12,10 @@
     </div>
   </div>
 
-      <div class="title one">
-
-    </div>
-
-    <div class="green-container col-sm-12 col-lg-11 offset-md-1">
+    <div class="triangle-container">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+          <polygon points="0,0 50,0 40,10 55,30 0,75" class="triangle" />
+        </svg>
     </div>
 
   <div class="intro-cards">
